test/sema/lambdas/lambda_type_infer_from_nested_lambda_error.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:14: error: explicit type annotations are needed to infer the type of 'x'
  let l = ->(x){};

  ->() {
    let f: (number) -> unit = l;
  };
}
